--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 html {
   	box-sizing: border-box;
 	font-size:16px;
-    background-image: radial-gradient(white,grey,antiquewhite);
+    background-color: black;
+    scroll-behavior: smooth;
+    color:white;    
 }
 *, *:before, *:after {
   box-sizing: inherit;
@@ -11,8 +13,14 @@ body {
   margin: 0;
   padding: 0;
 }
-h1{
+header{
     text-align: center;
+}
+.logo-dogflix{
+    width: 250px;
+    height: 200px;
+    object-fit: cover;
+    object-position: center;
 }
 .media-container{
     text-align: center;
@@ -51,4 +59,26 @@ h1{
     left: 0;
     width: 100%; 
     height: 100%;
+}
+.btn-totop{
+    width: 4rem;
+    height: 4rem;
+    font: 1.2rem;
+    background-color: white;
+    border: none;
+    border-radius: 50%;
+    cursor: pointer;
+    position: fixed;
+    right: 0.8rem;
+    bottom: 0.8rem;
+    /* box-shadow: 0.5rem 0.5rem 0.5rem black; */
+    opacity: 0;
+   
+}
+.btn-totop:hover{
+    border: thick solid red;
+}
+.btn-visible{
+    opacity: 1;
+    
 }
